hphp/test/zend/good/Zend/tests/errmsg_015.php.expectf

Fatal error: Method test::__clone cannot accept any arguments in %s/errmsg_015.php on line 4
